Add applink to todays special button

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
  <i class="fa fa-heart-o icon"></i>
     <h1>Coffee - Makes you Love</h1>
     <p>A Lot Can Happen Over Coffee, Its Awesome!!! </p>
-    <a href="#portfolio" class="smoothScroll btn btn-lg">Today's Special</a> 
+    <a href="https://ktkanishka.github.io/applink/1888063" class="smoothScroll btn btn-lg">Today's Special</a> 
 	</div>
 	</header>
 </div>
