--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
  <i class="fa fa-heart-o icon"></i>
     <h1>Coffee - Makes you Love</h1>
     <p>A Lot Can Happen Over Coffee, Its Awesome!!! </p>
-    <a href="https://ktkanishka.github.io/applink/1888063" class="smoothScroll btn btn-lg">Make a Payment</a> 
+    <!-- https://ktkanishka.github.io/applink/1888063 -->
+    <a href="https://kis-next.quicktravel.com.au/front_office/bookings/5530688#review-pay" class="smoothScroll btn btn-lg">Make a Payment</a> 
 	</div>
 	</header>
 </div>
