--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
     <h1>Coffee - Makes you Love</h1>
     <p>A Lot Can Happen Over Coffee, Its Awesome!!! </p>
     <!-- https://ktkanishka.github.io/applink/6148663 1894862 6150029 6149974-->
-    <a href="https://kis-next.quicktravel.com.au/front_office/bookings/2228517#review-pay" class="smoothScroll btn btn-lg">Make a Payment</a> 
+<!-- 	 https://www.otr.com.au/otr-app/?path=goto&page=fuel&site=582&pump=1 -->
+<!-- 	 href="https://kis-next.quicktravel.com.au/front_office/bookings/2228517#review-pay" -->
+    <a href="https://www.otr.com.au/otr-app/?path=goto&page=fuel&site=582&pump=1" class="smoothScroll btn btn-lg">Make a Payment</a> 
 	</div>
 	</header>
 </div>
